<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="25dp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/DemoMainActivity_Button_Title_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/app_main_login"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/user_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/user_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:textColor="#80505050"
                        android:textSize="18sp"
                        android:visibility="gone" />
                </LinearLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/new_login_btn"
                    style="@style/DemoMainActivity_Button_Style"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/ck_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="支持扫码"/>
            </LinearLayout>

            <Button
                android:id="@+id/check_token_valid"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="使用token信息登录,不拉起手Q"/>

            <!--<Button-->
                <!--android:id="@+id/server_side_login_btn"-->
                <!--style="@style/DemoMainActivity_Button_Style"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

            <TextView
                style="@style/DemoMainActivity_Button_Title_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/app_main_api" />

            <Button
                android:id="@+id/main_qqShare_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_qq_share" />

            <Button
                android:id="@+id/main_qzoneShare_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_qzon_share" />
            
            <!--<Button
                android:id="@+id/main_social_api_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_social_api"/>-->

            <Button
                android:id="@+id/main_sso_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_is_support_sso_login" />

            <Button
                android:id="@+id/main_getInfo_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_get_user_info" />

            <Button
                android:id="@+id/app_get_unionid"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_get_unionid" />

            <Button
                android:id="@+id/main_is_qq_installed_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_is_qq_installed" />
            <Button
                android:id="@+id/game_add_friend"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_add_friend_in_game" />

            <Button
                android:id="@+id/main_qqgroup_btn"
                style="@style/DemoMainActivity_Button_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_main_qqgroupp_api" />
            
            <!-- 下面的注释请勿删除，编译lite版的时候需要删除-->
        </LinearLayout>
    </ScrollView>

</LinearLayout>